fixed filter croll and gaps

--- a/src/app/main/accounts/home/accounts-home.component.scss
+++ b/src/app/main/accounts/home/accounts-home.component.scss
@@ -7,23 +7,20 @@
   height: calc(100% - 16px);
   width: calc(100% - 16px);
   padding: 8px;
-  overflow: auto;
 
 
   .mat-sidenav-filters {
     top: 70px;
-
-    &.mat-drawer {
-      bottom: auto;
-    }
-
+    bottom: 8px;
     .accounts-filters {
+      height: 100%;
       border-style: solid;
       border-width: 4px;
       border-top: 0;
       border-bottom: 0;
       border-right: 0;
       padding: 24px;
+      overflow: auto;
 
       .label-balance {
         font-size: 14px;
